_includes/agency.css
/* This file overrides the default formatting of some Bootstrap objects and defines
 * a few new things for use with this theme (originally called "agency", adapted in
 * to "event", and now mine).
 */

html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  height: 100%;
}

*, *:before, *:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

body {
	position: absolute;
	margin: 0;
	padding-bottom: 90px;
	min-height: 100%;
	width: 100%;
	overflow-x: hidden;
	font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
	color: #{{ site.data.template.color.secondary-dark }};
}

/* does it actually look better to have more padding as screen gets narrower? */
@media screen and (max-width : 1200px){
  body {
	  padding-bottom: 100px;
  }
}

@media screen and (max-width : 768px){
  body {
	  padding-bottom: 150px;
  }
}

.bg-light-gray {
	background-color: #f7f7f7;
}

.text-muted {
	color: #{{ site.data.template.color.muted }};
}

p {
	line-height: 1.5;
	font-size: 110%;
}

a,
a:hover,
a:focus,
a:active,
a.active {
	outline: 0;
}

a {
	color: #{{ site.data.template.color.primary }};
}

a:hover,
a:focus,
a:active,
a.active {
	color: #{{ site.data.template.color.secondary }};
	text-decoration: none; /* no underlining links */
}

h1,
h2,
h3,
h4,
h5,
h6 {
	text-transform: uppercase;
	font-family: {{ site.data.template.font.primary }};
	font-weight: 700; /* 700 is standard bold */
}

.img-centered {
	margin: 0 auto;
}

.btn-xl {
	padding: 20px 40px;
	font-size: 18px;
	font-weight: 700;
}

.btn-sm {
	padding: 10px 20px;
	font-size: 14px;
	font-weight: 700;
}

.btn-sm, .btn-xl {
	color: #fff;
	background-color: #{{ site.data.template.color.primary }};
	border: none;
	text-transform: uppercase;
	font-family: {{ site.data.template.font.primary }};
}

.btn-sm:hover,
.btn-sm:focus,
.btn-sm:active,
.btn-xl:hover,
.btn-xl:focus,
.btn-xl:active,
.open .dropdown-toggle.btn-xl {
	border-color: #{{ site.data.template.color.primary }};
	color: #fff;
	background-color: #{{ site.data.template.color.secondary }};
}

.navbar-toggler {
	color: #fff;
	background-color: #{{ site.data.template.color.primary }};
}

.page-scroll { /* the buttons in the navbar */
	border-radius: 3px;
	padding: 0.33rem 0.75rem;
	background-color: transparent;
	text-transform: uppercase;
	font-family: {{ site.data.template.font.primary }};
	font-weight: bold;
	letter-spacing: 1px;
	color: #fff;
}

.page-scroll:hover {
	color: #{{ site.data.template.color.primary }};
}

.page-scroll:active {
	background-color: #{{ site.data.template.color.primary }};
}

.nav>a.active {
    border-radius: 3px;
    color: #fff;
    background-color: #{{ site.data.template.color.primary }};
}

.nav>a.active:hover {
    background-color: #{{ site.data.template.color.secondary }};
}

@grid-float-breakpoint: 1000px;

/*
@media(max-width:1000px) {
	.navbar-collapse {
		width: 120px;
	}

	.navbar-collapse li a {
		background-color: #222;
	}
}*/

.welcome {
	height: 100vh; /* This section is adaptively exactly one screenheight tall. Pretty slick. */
	text-align: center;
	padding: 35vh 0; /* for vertical centering */
	color: #fff;
	background-attachment: scroll;
	background-image: url('{{ site.baseurl }}/assets/purple_stars.jpg');
	background-position: center center;
	background-repeat: none;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
	-o-background-size: cover;
}

.welcome .intro-heading {
	text-transform: uppercase;
	font-family: {{ site.data.template.font.primary }};
	font-size: 75px;
	font-weight: 700;
	line-height: 75px;
	margin-bottom: 25px;
}

.welcome .intro-lead-in {
	font-family: {{ site.data.template.font.secondary }};
	font-size: 40px;
	font-style: italic;
	line-height: 40px;
}

@media(max-width:768px) {
	.welcome .intro-heading {
		font-size: 40px;
		line-height: 40px;
	}

	.welcome .intro-lead-in {
		font-size: 22px;
		line-height: 22px;
	}
}

section {
	padding: 30px 30px;
}

aside.clients h2,
section h2.section-heading {
	margin-top: 0;
	margin-bottom: 15px;
	font-size: 40px;
}

section h3.section-subheading {
	margin-bottom: 75px;
	text-transform: none;
	font-family: {{ site.data.template.font.secondary }};
	font-size: 120%;
	font-style: italic;
	font-weight: 400;
}

.service-heading {
	margin: 15px 0;
	text-transform: none;
}

#writing .writing-item {
	right: 0;
	margin: 0 0 15px;
}

#writing .writing-item .writing-link {
	display: block;
	position: relative;
	margin: 0 auto;
	max-width: 400px;
}

#writing .writing-item .writing-link .writing-hover {
	position: absolute;
	width: 100%;
	height: 100%;
	opacity: 0;
	-webkit-transition: all ease .5s;
	-moz-transition: all ease .5s;
	transition: all ease .5s;
	background: #3cb371;
}

#writing .writing-item .writing-link .writing-hover:hover {
	opacity: 1;
}

#writing .writing-item .writing-link .writing-hover .writing-hover-content {
	position: absolute;
	top: 50%;
	width: 100%;
	height: 20px;
	margin-top: -12px;
	text-align: center;
	font-size: 120%;
	color: #fff;
}

#writing .writing-item .writing-link .writing-hover .writing-hover-content i {
	margin-top: -12px;
}

#writing .writing-item .writing-link .writing-hover .writing-hover-content h3,
#writing .writing-item .writing-link .writing-hover .writing-hover-content h4 {
	margin: 0;
}

#writing .writing-item .writing-caption {
	margin: 0 auto;
	padding-top: 25px;
	padding-bottom: 5px;
	max-width: 400px;
	min-height: 100px;
	text-align: center;
	background-color: #fff;
}

#writing .writing-item .writing-caption h4 {
	margin: 0;
	text-transform: none;
}

#writing * {
	z-index: 2;
}

@media(min-width:767px) {
	#writing .writing-item {
		margin: 0 0 30px;
	}
}

.timeline {
	position: relative;
	padding: 0;
	list-style: none;
}

.timeline:before {
	content: "";
	position: absolute;
	top: 0;
	left: 40px;
	width: 2px;
	margin-left: -1.5px;
	background-color: #f1f1f1;
}
/* ... */

